--- a/assets/motd.html
+++ b/assets/motd.html
@@ -1,1 +1,1 @@
-<html><head><title>Zone Server</title></head><body style="margin:0;padding:0;background:#000;overflow-y:hidden"><img src="http://zeatslauncherstorage.blob.core.windows.net/zone-server/motd.jpeg" style="width:100%;height:100%"><noframes></noframes><noscript></noscript></body></html>
+<html><head><title>Zone Server</title></head><body style="margin:0;padding:0;background:#000;overflow-y:hidden"><img src="http://l4d2playstats.blob.core.windows.net/assets/motd.jpeg" style="width:100%;height:100%"><noframes></noframes><noscript></noscript></body></html>
